--- a/package.json
+++ b/package.json
@@ -57,14 +57,12 @@
         "webpack-dev-server": "^3.7.2"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.19",
-        "@fortawesome/free-solid-svg-icons": "^5.9.0",
-        "@fortawesome/react-fontawesome": "^0.1.4",
         "@types/react": "^16.8.21",
         "@types/react-dom": "^16.8.4",
         "husky": "^2.4.1",
         "lint-staged": "^8.2.1",
         "react": "^16.8.6",
-        "react-dom": "^16.8.6"
+        "react-dom": "^16.8.6",
+        "react-icons": "^3.7.0"
     }
 }
